user,notification,bla bla

--- a/Views/client/destination-details.cshtml
+++ b/Views/client/destination-details.cshtml
@@ -266,7 +266,7 @@
     <!--End pagewrapper-->
    
     <script src="/assets/js/jquery-3.6.0.min.js"></script>
-    <script src="/assets/js/bootstrap.min.js"></script>
+    <script src="/assets/js/bootstrap.bundle.min.js"></script>
     <script src="/assets/js/appear.min.js"></script>
     <script src="/assets/js/slick.min.js"></script>
     <script src="/assets/js/jquery.magnific-popup.min.js"></script>
