--- a/Views/client/favorite.cshtml
+++ b/Views/client/favorite.cshtml
@@ -297,7 +297,7 @@
     <!-- Jquery -->
     <script src="assets/js/jquery-3.6.0.min.js"></script>
     <!-- Bootstrap -->
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
     <!-- Appear Js -->
     <script src="assets/js/appear.min.js"></script>
     <!-- Slick -->
