--- a/Views/client/share/script.cshtml
+++ b/Views/client/share/script.cshtml
@@ -1,7 +1,5 @@
 ﻿<!-- Jquery -->
 <script src="@Url.Content("~/assets/js/jquery-3.6.0.min.js")" asp-append-version="true"></script>
-<!-- Bootstrap -->
-<script src="@Url.Content("~/assets/js/bootstrap.min.js")" asp-append-version="true"></script>
 <!-- Appear Js -->
 <script src="@Url.Content("~/assets/js/appear.min.js")" asp-append-version="true"></script>
 <!-- Slick -->
@@ -18,7 +16,9 @@
 <script src="@Url.Content("~/assets/js/isotope.pkgd.min.js")" asp-append-version="true"></script>
 <!-- AOS Animation -->
 <script src="@Url.Content("~/assets/js/aos.js")" asp-append-version="true"></script>
-<!-- Custom Script -->
+<!-- Custom Script --> 
 <script src="@Url.Content("~/assets/js/script.js")" asp-append-version="true"></script>
 <!-- jQuery UI -->
 <script src="@Url.Content("~/assets/js/jquery-ui.min.js")" asp-append-version="true"></script>
+<!-- Bootstrap Bundle (đã bao gồm Popper) - chỉ dùng 1 dòng này, không dùng bootstrap.min.js hoặc popper.min.js riêng lẻ -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
