--- a/Views/admin/share/menu.cshtml
+++ b/Views/admin/share/menu.cshtml
@@ -22,17 +22,17 @@
           <div class="tooltip">Trang chủ</div>
         </a> -->
 
-        <a href="#" class="menu-item">
+        <a href="/admin/account-admin" class="menu-item">
             <i class="fa-light fa-user-tie"></i>
             <span class="menu-text">Admin</span>
             <div class="tooltip">Admin</div>
         </a>
 
-        <a href="#" class="menu-item">
+        @* <a href="#" class="menu-item">
             <i class="fa-light fa-lock"></i>
             <span class="menu-text">Role</span>
             <div class="tooltip">Role</div>
-        </a>
+        </a> *@
 
         <a href="/admin/user-manager" class="menu-item">
             <i class="fa-light fa-user"></i>
@@ -40,7 +40,7 @@
             <div class="tooltip">User</div>
         </a>
 
-        <a href="#" class="menu-item">
+        <a href="/admin/category" class="menu-item">
             <i class="fa-light fa-books"></i>
             <span class="menu-text">Category</span>
             <div class="tooltip">Category</div>
@@ -52,36 +52,54 @@
             <div class="tooltip">Tour</div>
         </a>
 
-        <a href="#" class="menu-item">
+        <a href="/admin/destination-admin" class="menu-item">
+            <i class="fa-light fa-location-dot"></i>
+            <span class="menu-text">Destination</span>
+            <div class="tooltip">Destination</div>
+        </a>
+        @* <a href="#" class="menu-item">
             <i class="fa-light fa-location-dot"></i>
             <span class="menu-text">Location</span>
             <div class="tooltip">Location</div>
-        </a>
+        </a> *@
 
-        <a href="#" class="menu-item">
+        @* <a href="#" class="menu-item">
             <i class="fa-light fa-timer"></i>
             <span class="menu-text">Booking</span>
             <div class="tooltip">Booking</div>
+        </a> *@
+
+        <a href="/admin/blog-tag" class="menu-item">
+            <i class="fa-light fa-tags"></i>
+            <span class="menu-text">Blog-tag</span>
+            <div class="tooltip">Blog-tag</div>
         </a>
 
-        <a href="#" class="menu-item">
+        <a href="/admin/blog" class="menu-item">
             <i class="fa-light fa-blog"></i>
             <span class="menu-text">Blog</span>
             <div class="tooltip">Blog</div>
         </a>
-        <a href="#" class="menu-item">
-            <i class="fa-light fa-comments"></i>
-            <span class="menu-text">Feedback</span>
-            <div class="tooltip">Feedback</div>
+
+        <a href="/admin/blog-detail" class="menu-item">
+            <i class="fa-light fa-blog"></i>
+            <span class="menu-text">Blog-detail</span>
+            <div class="tooltip">Blog-detail</div>
         </a>
 
-        <a href="#" class="menu-item">
+        <a href="/admin/content-approval" class="menu-item">
+            <i class="fa-light fa-comments"></i>
+            <span class="menu-text">Content Approval</span>
+            <div class="tooltip">Content Approval</div>
+        </a>
+
+        @* <a href="#" class="menu-item">
             <i class="fa-light fa-chart-simple"></i>
             <span class="menu-text">Statistical</span>
             <div class="tooltip">Statistical</div>
-        </a>
+        </a> *@
 
-        <a href="#" class="menu-item">
+        @* <a href="#" class="menu-item">
             <i class="fa-light fa-utensils"></i>
             <span class="menu-text">Restaurant</span>
             <div class="tooltip">Restaurant</div>
@@ -91,9 +109,9 @@
             <i class="fa-light fa-hotel"></i>
             <span class="menu-text">Hotel</span>
             <div class="tooltip">Hotel</div>
-        </a>
+        </a> *@
 
-        <a href="#" class="menu-item">
+        @*  <a href="#" class="menu-item">
             <i class="fa-light fa-truck-plane"></i>
             <span class="menu-text">Vehicle</span>
             <div class="tooltip">Vehicle</div>
@@ -103,12 +121,12 @@
             <i class="fa-light fa-star-shooting"></i>
             <span class="menu-text">Service</span>
             <div class="tooltip">Service</div>
-        </a>
+        </a> *@
 
-        <a href="#" class="menu-item">
+        <a href="/admin/coupons" class="menu-item">
             <i class="fa-light fa-ticket"></i>
             <span class="menu-text">Coupons </span>
             <div class="tooltip">Coupons</div>
-        </a>
+        </a> 
     </nav>
 </aside>
