--- a/Views/client/share/header.cshtml
+++ b/Views/client/share/header.cshtml
@@ -141,10 +141,7 @@
                         </ul>
                     </div>
                 }
-                <a href="contact.html" class="theme-btn style-two bgc-secondary ms-2">
-                    <span data-hover="Book Now">Book Now</span>
-                    <i class="fal fa-arrow-right"></i>
-                </a>
+                <a href="/Tour-list" class="theme-btn style-two"><span data-hover="Book Now">Book Now</span></a>
                 <!-- menu sidbar -->
                 <div class="menu-sidebar">
                     <button class="bg-transparent">
