--- a/Views/client/share/header2.cshtml
+++ b/Views/client/share/header2.cshtml
@@ -105,10 +105,7 @@
 
                 <!-- Menu Button -->
                 <div class="menu-btns py-10">
-                    <a href="contact.html" class="theme-btn style-two bgc-secondary">
-                        <span data-hover="Book Now">Book Now</span>
-                        <i class="fal fa-arrow-right"></i>
-                    </a>
+                    <a href="/Tour-list" class="theme-btn style-two"><span data-hover="Book Now">Book Now</span></a>
                     <!-- menu sidbar -->
                     <div class="menu-sidebar">
                         <button class="bg-transparent">
