--- a/Views/admin/coupons/Coupons.cshtml
+++ b/Views/admin/coupons/Coupons.cshtml
@@ -168,11 +168,11 @@
                         </div>
                         <div class="mb-3">
                             <label for="addStartDate" class="form-label">Start Date</label>
-                            <input type="date" class="form-control" id="addStartDate" name="StartDate">
+                            <input type="datetime-local" class="form-control" id="addStartDate" name="StartDate">
                         </div>
                         <div class="mb-3">
                             <label for="addEndDate" class="form-label">End Date</label>
-                            <input type="date" class="form-control" id="addEndDate" name="EndDate">
+                            <input type="datetime-local" class="form-control" id="addEndDate" name="EndDate">
                         </div>
                         <div class="mb-3">
                             <label for="addStatus" class="form-label">Status</label>
