--- a/Views/admin/coupons/Coupons.cshtml
+++ b/Views/admin/coupons/Coupons.cshtml
@@ -222,11 +222,11 @@
                         </div>
                         <div class="mb-3">
                             <label for="editStartDate" class="form-label">Start Date</label>
-                            <input type="date" class="form-control" id="editStartDate" name="StartDate">
+                            <input type="datetime-local" class="form-control" id="editStartDate" name="StartDate">
                         </div>
                         <div class="mb-3">
                             <label for="editEndDate" class="form-label">End Date</label>
-                            <input type="date" class="form-control" id="editEndDate" name="EndDate">
+                            <input type="datetime-local" class="form-control" id="editEndDate" name="EndDate">
                         </div>
                         <div class="mb-3">
                             <label for="editStatus" class="form-label">Status</label>
