--- a/Views/client/share/header.cshtml
+++ b/Views/client/share/header.cshtml
@@ -3,7 +3,7 @@
 
         <div class="header-inner rel d-flex align-items-center">
             <div class="logo-outer">
-                <div class="logo"><a href="index.html"><img src="@Url.Content("~/assets/images/logos/logo.png")" alt="Logo" title="Logo"></a></div>
+                <div class="logo"><a href="home"><img src="@Url.Content("~/assets/images/logos/logo.png")" alt="Logo" title="Logo"></a></div>
             </div>
 
             <div class="nav-outer mx-lg-auto ps-xxl-5 clearfix">
@@ -11,7 +11,7 @@
                 <nav class="main-menu navbar-expand-lg">
                     <div class="navbar-header">
                         <div class="mobile-logo">
-                            <a href="index.html">
+                            <a href="home">
                                 <img src="@Url.Content("~/assets/images/logos/logo.png")" alt="Logo" title="Logo">
                             </a>
                         </div>
@@ -29,60 +29,13 @@
                             <li class="dropdown current">
                                 <a href="#">Home</a>
                                 <ul>
-                                    <li><a href="index.html">Travel Agency</a></li>
-                                    <li><a href="index2.html">City Tou</a></li>
-                                    <li><a href="index3.html">Tour Package</a></li>
+                                    <li><a href="#">Travel Agency</a></li>
+                                    <li><a href="#">City Tour</a></li>
+                                    <li><a href="#">Tour Package</a></li>
                                 </ul>
                             </li>
-                            <li><a href="about.html">About</a></li>
-                            <li class="dropdown">
-                                <a href="#">Tours</a>
-                                <ul>
-                                    <li><a href="tour-list.html">Tour List</a></li>
-                                    <li><a href="tour-grid.html">Tour Grid</a></li>
-                                    <li><a href="tour-sidebar.html">Tour Sidebar</a></li>
-                                    <li><a href="tour-details.html">Tour Details</a></li>
-                                    <li><a href="tour-guide.html">Tour Guide</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown">
-                                <a href="#">Destinations</a>
-                                <ul>
-                                    <li><a href="destination1.html">Destination 01</a></li>
-                                    <li><a href="destination2.html">Destination 01</a></li>
-                                    <li><a href="destination-details.html">Destination Details</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown">
-                                <a href="#">Pages</a>
-                                <ul>
-                                    <li><a href="pricing.html">Pricing</a></li>
-                                    <li><a href="faqs.html">faqs</a></li>
-                                    <li class="dropdown">
-                                        <a href="#">Gallery</a>
-                                        <ul>
-                                            <li><a href="gellery-grid.html">Gallery Grid</a></li>
-                                            <li><a href="gellery-slider.html">Gallery Slider</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="dropdown">
-                                        <a href="#">products</a>
-                                        <ul>
-                                            <li><a href="shop.html">Our Products</a></li>
-                                            <li><a href="product-details.html">Product Details</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="contact.html">Contact Us</a></li>
-                                    <li><a href="404.html">404 Error</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown">
-                                <a href="#">blog</a>
-                                <ul>
-                                    <li><a href="blog.html">blog List</a></li>
-                                    <li><a href="blog-details.html">blog details</a></li>
-                                </ul>
-                            </li>
+                            <li><a href="tour-list">Tour list</a></li>
+                            <li><a href="blog">Blog</a></li>
                         </ul>
                     </div>
 
@@ -141,15 +94,17 @@
                         </ul>
                     </div>
                 }
-                <a href="/Tour-list" class="theme-btn style-two"><span data-hover="Book Now">Book Now</span></a>
                 <!-- menu sidbar -->
-                <div class="menu-sidebar">
-                    <button class="bg-transparent">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                </div>
+                @if (!isLoggedIn)
+                {
+                    <div class="menu-sidebar">
+                        <button class="bg-transparent">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                    </div>
+                }
             </div>
         </div>
     </div>
